--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cors": "^2.7.1",
     "debug": "^2.2.0",
     "lodash": "^3.10.0",
-    "loopback-swagger": "^2.1.0",
+    "loopback-swagger": "https://github.com/sqlwwx/loopback-swagger/tarball/next",
     "strong-swagger-ui": "^21.0.0"
   }
 }
